5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/1407/executions/1578_994.log
== TEST (2019-03-13 10:20:31) 
-- CODE:
print(""
-- ERROR:
File "XXXX", line 2
    
            ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 10:20:42) 
-- CODE:
print("Bruce wayne)
-- ERROR:
File "XXXX", line 1
    print("Bruce wayne)
                      ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 10:20:51) 
-- CODE:
print(Bruce wayne")
-- ERROR:
File "XXXX", line 1
    print(Bruce wayne")
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 13:07:47) 
-- CODE:
print(Bruce Wayne")
-- ERROR:
File "XXXX", line 1
    print(Bruce Wayne")
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:30:56) 
-- CODE:
print(Bruce Wayne")
-- ERROR:
File "XXXX", line 1
    print(Bruce Wayne")
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:40:58) 
-- CODE:
print(Bruce Wayne")
-- ERROR:
File "XXXX", line 1
    print(Bruce Wayne")
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 14:38:41) 
-- CODE:
print(Bruce Wayne")
-- ERROR:
File "XXXX", line 1
    print(Bruce Wayne")
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 15:00:14) 
-- CODE:
A = 1
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(a)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 15:00:22) 
-- CODE:
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(a)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 15:00:30) 
-- CODE:
print(A)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(A)
NameError: name 'A' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 15:00:37) 
-- CODE:
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(a)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 15:00:41) 
-- CODE:
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(b)
NameError: name 'b' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 15:00:44) 
-- CODE:
print(B)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(B)
NameError: name 'B' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 15:00:59) 
-- CODE:
print(normal)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(normal)
NameError: name 'normal' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 15:01:02) 
-- CODE:
print(NORMAL)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(NORMAL)
NameError: name 'NORMAL' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 15:01:06) 
-- CODE:
print(Normal)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(Normal)
NameError: name 'Normal' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 15:01:15) 
-- CODE:
print(print)
-- OUTPUT:
<built-in function print>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 15:01:16) 
-- CODE:
print(print)
-- OUTPUT:
<built-in function print>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 15:01:20) 
-- CODE:
print(oi)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(oi)
NameError: name 'oi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 15:01:23) 
-- CODE:
print(Oi)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(Oi)
NameError: name 'Oi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 15:01:30) 
-- CODE:
print(iO)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(iO)
NameError: name 'iO' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 15:01:35) 
-- CODE:
print(iioio)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(iioio)
NameError: name 'iioio' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 15:02:53) 
-- CODE:
print(iioio)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(iioio)
NameError: name 'iioio' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 15:02:58) 
-- CODE:
print(Io)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(Io)
NameError: name 'Io' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 15:03:01) 
-- CODE:
print(iO)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(iO)
NameError: name 'iO' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 15:06:03) 
-- CODE:
print(Hermione Granger")
-- ERROR:
File "XXXX", line 1
    print(Hermione Granger")
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 09:48:51) 
-- CODE:
print(Hermione Granger")
-- ERROR:
File "XXXX", line 1
    print(Hermione Granger")
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 09:48:58) 
-- CODE:
print(Hermione Granger")
-- ERROR:
File "XXXX", line 1
    print(Hermione Granger")
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 09:48:59) 
-- CODE:
print(Hermione Granger")
-- ERROR:
File "XXXX", line 1
    print(Hermione Granger")
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 10:00:43) 
-- CODE:
print(Hermione Granger")
-- ERROR:
File "XXXX", line 1
    print(Hermione Granger")
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-18 10:00:43) 
-- CODE:
print(Hermione Granger")
-- EXECUTION TIME:
0.14467
-- ERROR:
  File "/home/codebench/codes/1578/994/main.py", line 1
    print(Hermione Granger")
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 10:07:32) 
-- CODE:
print(Hermione Granger")
-- ERROR:
File "XXXX", line 1
    print(Hermione Granger")
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 11:28:52) 
-- CODE:
print(Hermione Granger")
-- ERROR:
File "XXXX", line 1
    print(Hermione Granger")
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 11:28:56) 
-- CODE:
print(A)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(A)
NameError: name 'A' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 11:29:00) 
-- CODE:
print(AiO)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(AiO)
NameError: name 'AiO' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 11:29:04) 
-- CODE:
print(iosdjksO)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(iosdjksO)
NameError: name 'iosdjksO' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 11:29:29) 
-- CODE:
print("oi"
-- ERROR:
File "XXXX", line 2
    
              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
